Fix bug 100820, and fix the bug where if you type:  "hello &gt;"  then press up, it will be turned into "hello >"

BUG:100820

svn path=/trunk/kdeextragear-2/konversation/; revision=394882